fix width and spacing

--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -153,7 +153,11 @@ header {
 
     &__name {
       @include mixins.text-preset-2;
-      margin-bottom: var(--spacing-100);
+      margin-bottom: clamp(
+        var(--spacing-100),
+        -0.4542rem + 4.0712vw,
+        var(--spacing-300)
+      );
     }
 
     &__artist-name {
@@ -260,6 +264,7 @@ header {
         margin-left: -4.5rem;
         margin-top: 0;
         min-height: 39rem;
+        min-width: 0;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
